--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 plotly = "*"
 numpy = "*"
+pandas = "*"
+cufflinks = "*"
+scipy = "*"
 
 [requires]
 python_version = "3.7"
